add rating feature, remove labels, update backend URL

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ build/
 .idea/cheese-crave.iml
 node_modules/
 src/main/resources/application.properties
+!/src/main/resources/application.properties
