--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.cheesecrave</groupId>
     <artifactId>Cheese-Crave-Database</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>Cheese-Crave-Database</name>
     <description>Cheese-Crave-Database</description>
     <properties>
